--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:background="@color/bg_common_gray"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:layout_marginTop="@dimen/detail_desc_ll_marginTop"
+        android:background="@color/white"
+        android:padding="@dimen/detail_desc_ll_padding"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="                                          签到详情"
+            android:textColor="@color/detail_merchant_info_color"
+            android:textSize="@dimen/textSize_17"/>
+        <View
+            style="@style/detail_view_style"
+            android:layout_marginTop="@dimen/detail_view_marginTop"/>
+        <WebView
+            android:id="@+id/detail_desc_wv_description"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+        <View
+            style="@style/detail_view_style"/>
+        <RelativeLayout
+            android:id="@+id/detail_desc_check_detail_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:gravity="center"
+            android:padding="@dimen/detail_desc_check_layout_padding">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="@color/app_yellow"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                />
+        </RelativeLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:layout_marginTop="@dimen/detail_desc_ll_marginTop"
+        android:background="@color/white"
+        android:padding="@dimen/detail_desc_ll_padding"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="签到描述"
+            android:textColor="@color/detail_merchant_info_color"
+            android:textSize="@dimen/textSize_17"/>
+        <View
+            style="@style/detail_view_style"
+            android:layout_marginTop="@dimen/detail_view_marginTop"/>
+        <WebView
+            android:id="@+id/detail_desc_wv_tips"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_weight="1"
+        android:layout_marginTop="@dimen/detail_desc_ll_marginTop"
+        android:background="@color/white"
+        android:padding="@dimen/detail_desc_ll_padding"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="签到详情"
+            android:textColor="@color/detail_merchant_info_color"
+            android:textSize="@dimen/textSize_17"/>
+        <View
+            style="@style/detail_view_style"
+            android:layout_marginTop="@dimen/detail_view_marginTop"/>
+        <ListView
+            android:id="@+id/detail_desc_list_recommend"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
