--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,5 +8,9 @@
         android:id="@+id/lv_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    </ListView>
+    </ListView><Button
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/mButton"
+    android:text="@string/app_name"/>
 </RelativeLayout>
